presnting data on the View

--- a/Mars Mission/Mars Mission/View/WeatherViewController.xib
+++ b/Mars Mission/Mars Mission/View/WeatherViewController.xib
@@ -10,8 +10,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WeatherViewController" customModule="Mars_Mission" customModuleProvider="target">
             <connections>
-                <outlet property="titleLabel" destination="057-sL-Fny" id="ea7-eH-i3u"/>
+                <outlet property="dateLabel" destination="oj7-cj-rFH" id="m2t-R7-QQ0"/>
+                <outlet property="humidityLabel" destination="q0r-S3-ASh" id="a6F-jd-J3E"/>
+                <outlet property="safeLabel" destination="eSc-xM-gjE" id="xIV-6Z-leI"/>
+                <outlet property="tempLabel" destination="TPH-Xa-0pz" id="8J1-yi-7dW"/>
+                <outlet property="titleLabel" destination="oj7-cj-rFH" id="MSU-84-2vd"/>
                 <outlet property="view" destination="iN0-l3-epB" id="2bb-3s-H78"/>
+                <outlet property="windSpeedLabel" destination="HEY-e7-NF9" id="ftF-BE-0k7"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -25,6 +30,41 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="Qgz-sF-dWa">
+                    <rect key="frame" x="178" y="222" width="85" height="202.5"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oj7-cj-rFH" userLabel="dateLabel">
+                            <rect key="frame" x="0.0" y="0.0" width="85" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="temp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TPH-Xa-0pz" userLabel="tempLabel">
+                            <rect key="frame" x="0.0" y="45.5" width="85" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="humidity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q0r-S3-ASh" userLabel="humudityLabel">
+                            <rect key="frame" x="0.0" y="91" width="85" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="windSpeed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HEY-e7-NF9" userLabel="windSpeedLabel">
+                            <rect key="frame" x="0.0" y="136.5" width="85" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eSc-xM-gjE" userLabel="safeLabel">
+                            <rect key="frame" x="0.0" y="182" width="85" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemTealColor"/>
